@startuml
title LANCHE MVP - Modelo Entidade-Relacionamento

entity "usuarios" as usuarios {
  * id : INT <<PK>>
  --
  * email : VARCHAR(100) <<NN>> UNIQUE
  * senha_hash : VARCHAR(255) <<NN>>
  * nome : VARCHAR(100) <<NN>>
  * role : VARCHAR(20) <<NN>>
  * ativo : BOOLEAN <<NN>>
  * criado_em : TIMESTAMP
  * atualizado_em : TIMESTAMP
  * ultimo_acesso : TIMESTAMP
}

entity "produtos" as produtos {
  * id : INT <<PK>>
  --
  * nome : VARCHAR(100) <<NN>> UNIQUE
  * descricao : TEXT
  * preco : DECIMAL(10,2) <<NN>>
  * categoria : VARCHAR(100) <<NN>>
  * data_validade : DATE
  * lote : VARCHAR(100)
  * temperatura_ideal_min : DECIMAL(5,2)
  * temperatura_ideal_max : DECIMAL(5,2)
  * ativo : BOOLEAN
  * criado_em : TIMESTAMP
  * atualizado_em : TIMESTAMP
}

entity "estoque" as estoque {
  * id : INT <<PK>>
  --
  * produto_id : INT <<FK>> <<NN>>
  * quantidade : INT <<NN>>
  * estoque_minimo : INT <<NN>>
  * estoque_maximo : INT <<NN>>
  * ponto_reposicao : INT <<NN>>
  * temperatura_atual : DECIMAL(5,2)
  * data_ultima_verificacao : TIMESTAMP
  * atualizado_em : TIMESTAMP
}

entity "vendas" as vendas {
  * id : INT <<PK>>
  --
  * usuario_id : INT <<FK>> <<NN>>
  * data_hora : TIMESTAMP <<NN>>
  * subtotal : DECIMAL(10,2) <<NN>>
  * total : DECIMAL(10,2) <<NN>>
  * status : VARCHAR(20) <<NN>>
}

entity "itens_venda" as itens_venda {
  * id : INT <<PK>>
  --
  * venda_id : INT <<FK>> <<NN>>
  * produto_id : INT <<FK>> <<NN>>
  * quantidade : INT <<NN>>
  * preco_unitario : DECIMAL(10,2) <<NN>>
  * subtotal : DECIMAL(10,2) <<NN>>
}

entity "alertas" as alertas {
  * id : INT <<PK>>
  --
  * tipo : VARCHAR(50) <<NN>>
  * produto_id : INT <<FK>>
  * estoque_id : INT <<FK>>
  * titulo : VARCHAR(255) <<NN>>
  * descricao : TEXT
  * lido : BOOLEAN
  * ativo : BOOLEAN
  * criado_em : TIMESTAMP
}

entity "ordens_reposicao" as ordens_reposicao {
  * id : INT <<PK>>
  --
  * estoque_id : INT <<FK>> <<NN>>
  * produto_id : INT <<FK>> <<NN>>
  * quantidade_solicitada : INT <<NN>>
  * quantidade_recebida : INT
  * status : VARCHAR(50) <<NN>>
  * data_criacao : TIMESTAMP
}

' Relacionamentos
usuarios ||--o{ vendas
produtos ||--|| estoque
produtos ||--o{ itens_venda
vendas ||--o{ itens_venda
estoque ||--o{ ordens_reposicao
produtos ||--o{ ordens_reposicao
produtos ||--o{ alertas
estoque ||--o{ alertas

note bottom of produtos
  Catálogo único de produtos
end note

note bottom of estoque
  Uma linha por produto
end note

note bottom of vendas
  Histórico imutável
end note

note bottom of itens_venda
  Detalhe da venda
end note

@enduml